# path-dedot

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci-version.yml  ci.yml
benches/: bench.rs
src/: cwd.rs  lib.rs  parse_dot.rs  unix.rs  unsafe_cwd.rs  windows.rs
tests/: unix.rs  unix_unsafe_cache.rs  windows.rs  windows_unsafe_cache.rs
