[package]
name = "path-dedot"
version = "1.2.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/path-dedot"
homepage = "https://magiclen.org/path-dedot"
keywords = ["path", "dot", "dedot", "absolute", "canonical"]
categories = ["parser-implementations", "filesystem"]
description= "A library for extending `Path` and `PathBuf` in order to parse the path which contains dots."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/path-dedot"
branch = "master"

[dependencies]
lazy_static = "1.1.0"